--- a/Views/Clima/Index.cshtml
+++ b/Views/Clima/Index.cshtml
@@ -69,7 +69,7 @@
                     }
                     else
                     {
-                        <div class="alert alert-warning text-center">No se pudo obtener la información del clima o la API respondió con error.</div>
+                        <div class="alert alert-warning text-center">No se pudo obtener la información del clima de esa región.</div>
                     }
                     @if (resumenPronostico.Count > 0)
                     {
